--- a/app/views/factory/making_orders/print/_mix.html.erb
+++ b/app/views/factory/making_orders/print/_mix.html.erb
@@ -84,9 +84,13 @@
         <tbody>
           <tr>
             <th>Operario</th>
+            <th>H/Ini</th>
             <th>Fecha</th>
+            <th>H/Fin</th>
           </tr>
           <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
