Show as many mix oparation entries as mixes needed to complete the total mix

--- a/app/views/factory/making_orders/print/_mix.html.erb
+++ b/app/views/factory/making_orders/print/_mix.html.erb
@@ -88,12 +88,14 @@
             <th>Fecha</th>
             <th>H/Fin</th>
           </tr>
-          <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-          </tr>
+          <% (1..@making_order.rounds_count).to_a.each do %>
+            <tr>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+          <% end %>
         </tbody>
       </table>
     </td>
