--- a/app/views/factory/making_orders/print/_pressing.html.erb
+++ b/app/views/factory/making_orders/print/_pressing.html.erb
@@ -49,7 +49,7 @@
                 <td class="amount"><%= item.quantity %></td>
                 <td>
                   <div class="cell-checkbox">
-                    <%= item.product_shape %> <input type="checkbox">
+                    <%= item.product_shape %> <span class="check-here"></span>
                   </div>
                 </td>
                 <td><%= item.product_size %></td>
