--- a/app/assets/stylesheets/making_orders.css.scss
+++ b/app/assets/stylesheets/making_orders.css.scss
@@ -2,8 +2,6 @@
   body#comman[data-controller="factory_making_orders"][data-action="action_show"] {
     padding: 0;
     margin: 0;
-    height: 279.4mm;
-    width: 215.9mm;
     .web {
       display: none;
     }
@@ -14,9 +12,14 @@
   display: flex;
   justify-content: space-between;
   white-space: nowrap;
+  align-items: center;
 
-  [type="checkbox"] {
+  .check-here {
     margin-left: 2px;
     margin-right: 2px;
+    border: 2px solid black;
+    display: inline-block;
+    height: 10px;
+    width: 10px;
   }
 }
