--- a/app/views/factory/products/index.html.erb
+++ b/app/views/factory/products/index.html.erb
@@ -11,5 +11,5 @@
 <% end %>
 
 <div id="product-list">
-  <%= render 'list', products: @products %>
+  <%= render 'list', products: @products, search: @search %>
 </div>
