--- a/app/views/factory/formula_elements/_list.html.erb
+++ b/app/views/factory/formula_elements/_list.html.erb
@@ -1,25 +1,27 @@
 <%= will_paginate formula_elements %>
+
 <table>
   <thead>
     <tr>
-      <th>ID</th>
-      <th>Name</th>
-      <th>Stock</th>
-      <th colspan="3"></th>
+      <th></th>
+      <th>
+        <%= sort_link(search, :id, FormulaElement.human_attribute_name(:id)) %>
+      </th>
+      <th>
+        <%= sort_link(search, :name, FormulaElement.human_attribute_name(:name)) %>
+      </th>
     </tr>
   </thead>
 
   <tbody>
     <% formula_elements.each do |formula_element| %>
-      <tr>
+      <tr class="formula-elements-list" data-formula-element-id="<%= formula_element.id %>">
+        <td><%= check_box_tag :select %></td>
         <td><%= formula_element.id %></td>
-        <td><%= formula_element.name %></td>
-        <td><%= formula_element.current_stock %></td>
-        <td><%= link_to 'Show', factory_formula_element_path(formula_element) %></td>
-        <td><%= link_to 'Edit', edit_factory_formula_element_path(formula_element) %></td>
-        <td><%= link_to 'Destroy', factory_formula_element_path(formula_element), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to formula_element.name, factory_formula_element_path(formula_element) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
 <%= will_paginate formula_elements %>
