--- a/app/views/factory/formula_elements/index.html.erb
+++ b/app/views/factory/formula_elements/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Formula Elements</h1>
+<h1><%= FormulaElement.model_name.human %></h1>
 
-<%= link_to 'New Formula Element', new_factory_formula_element_path %>
+<%= link_to t('actions.new'), new_factory_formula_element_path %>
 
 <%= form_for @search, url: factory_formula_elements_path, html: { method: :get } do |f| %>
   <%= f.text_field :id_eq, placeholder: 'ID' %>
@@ -11,5 +11,5 @@
 <% end %>
 
 <div id="formula-element-list">
-  <%= render 'list', formula_elements: @formula_elements %>
+  <%= render 'list', formula_elements: @formula_elements, search: @search %>
 </div>
