--- a/app/views/factory/products/_form.html.erb
+++ b/app/views/factory/products/_form.html.erb
@@ -1,8 +1,7 @@
 <%= form_for([:factory, product]) do |f| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
-
+      <h2><%= t('messages.form_errors', count: product.errors.count) %></h2>
       <ul>
       <% product.errors.full_messages.each do |message| %>
         <li><%= message %></li>
