--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,34 @@
  *= require_tree .
  *= require_self
  */
+
+// @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import "variables";
+
+html {
+
+  /* set base font-size to 10px, so 1rem is 10px */
+  font-size: 10px;
+  transition: $default-transition-time;
+}
+
+body {
+  padding: 0 $default-spacing;
+  margin: 0;
+
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: $font-size-base;
+  line-height: $line-height;
+  color: $text-color;
+
+  background-color: $white;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+* {
+  outline-color: $primary-color;
+  outline-width: .2rem;
+}
