--- a/app/views/factory/products/index.html.erb
+++ b/app/views/factory/products/index.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
+<h1><%= Product.model_name.human(count: 2) %></h1>
 
-<h1>Products</h1>
-
-<%= link_to 'New Product', new_factory_product_path %>
+<%= link_to t('actions.new'), new_factory_product_path %>
 
 <%= form_for @search, url: factory_products_path, html: { method: :get } do |f| %>
   <%= f.text_field :id_eq, placeholder: 'ID' %>
