--- a/app/views/factory/products/_form.html.erb
+++ b/app/views/factory/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([:factory, product]) do |f| %>
+<%= form_for([:factory, product], html: { class: "form" }) do |f| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
       <h2><%= t('messages.form_errors', count: product.errors.count) %></h2>
@@ -10,37 +10,37 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form__field">
     <%= f.label :formula %>
-    <%= f.collection_select(:formula_id, Formula.all, :id, :name) %>
+    <%= f.collection_select(:formula_id, Formula.all, :id, :name, prompt: true) %>
   </div>
 
-  <div class="field">
+  <div class="form__field">
     <%= f.label :shape %>
     <%= f.text_field :shape %>
   </div>
 
-  <div class="field">
+  <div class="form__field">
     <%= f.label :size %>
     <%= f.text_field :size %>
   </div>
 
-  <div class="field">
+  <div class="form__field">
     <%= f.label :weight %>
     <%= f.text_field :weight %>
   </div>
 
-  <div class="field">
+  <div class="form__field">
     <%= f.label :pressure %>
     <%= f.text_field :pressure %>
   </div>
 
-  <div class="field">
+  <div class="form__field">
     <%= f.label :price %>
     <%= f.text_field :price %>
   </div>
 
-  <div class="actions">
+  <div class="form__actions">
     <%= f.submit %>
   </div>
 <% end %>
