Fix reading reference to undefined object

--- a/app/views/factory/making_orders/print/_adjustment.html.erb
+++ b/app/views/factory/making_orders/print/_adjustment.html.erb
@@ -43,7 +43,7 @@
           <tbody>
             <% @making_order.making_order_items.each do |item| %>
               <tr>
-                <td><%= item.product.id %></td>
+                <td><%= item.product_id %></td>
                 <td class="amount"><%= item.quantity %></td>
                 <td><%= item.product_shape %></td>
                 <td><%= item.product_size %></td>
