--- a/app/views/factory/formulas/edit.html.erb
+++ b/app/views/factory/formulas/edit.html.erb
@@ -3,6 +3,6 @@
 
   <%= render "form", formula: @formula %>
 
-  <%= link_to "Show this formula", @formula, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Show this formula", factory_formula_path(@formula), class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   <%= link_to "Back to formulas", factory_formulas_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
