--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+[hidden] {
+  display: none;
+}
+
 @layer components {
   .btn-primary {
-    @apply block rounded-md bg-blue px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-lightBlue focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lightBlue;
+    @apply block rounded-md bg-blue px-3 py-2 text-center text-sm font-semibold text-white-500 shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700;
   }
 }
