Add pagination gem

--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <!-- Off-canvas menu for mobile, show/hide based on off-canvas menu state. -->
-<div class="relative z-50 lg:hidden" role="dialog" aria-modal="true">
+<div class="relative z-50 lg:hidden hidden" role="dialog" aria-modal="true">
   <!--
       Off-canvas menu backdrop, show/hide based on off-canvas menu state.
 
@@ -56,7 +56,7 @@
               </ul>
             </li>
             <li>
-              <div class="text-xs font-semibold leading-6 text-lightBlue">Your teams</div>
+              <div class="text-xs font-semibold leading-6 text-lightBlue">Departamentos</div>
               <ul role="list" class="-mx-2 mt-2 space-y-1">
                 <li>
                   <!-- Current: "bg-blue-700 text-white", Default: "text-lightBlue hover:text-white hover:bg-blue-700" -->
@@ -102,7 +102,7 @@
           </ul>
         </li>
         <li class="mt-auto">
-          <div class="text-xs font-semibold leading-6 text-lightBlue">Your teams</div>
+          <div class="text-xs font-semibold leading-6 text-lightBlue">Departamentos</div>
           <ul role="list" class="-mx-2 mt-2 space-y-1">
             <li>
               <!-- Current: "bg-blue-700 text-white", Default: "text-lightBlue hover:text-white hover:bg-blue-700" -->
