--- a/app/views/factory/formula_elements/index.html.erb
+++ b/app/views/factory/formula_elements/index.html.erb
@@ -41,6 +41,7 @@
             </tbody>
           </table>
         </div>
+        <%= paginate @formula_elements, total_count: @formula_elements.total_count %>
       </div>
     </div>
   </div>
