--- a/app/views/factory/formula_elements/show.html.erb
+++ b/app/views/factory/formula_elements/show.html.erb
@@ -21,11 +21,11 @@
       ]
     ) %>
     <div>
-      <div class="border-b border-lightGray-500 bg-white py-5 mb-6">
+      <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
         <h3 class="text-base font-semibold text-gray-900">Proveedores</h3>
       </div>
       <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
-        <div class="relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm focus-within:ring-2 focus-within:ring-red-500 focus-within:ring-offset-2 hover:border-gray-500">
+        <div class="relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white px-6 py-6 shadow-sm focus-within:ring-2 focus-within:ring-red-500 focus-within:ring-offset-2 hover:border-gray-500">
           <div class="flex-shrink-0">
             <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1611488006001-eb993d4d2ec4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
           </div>
@@ -37,7 +37,7 @@
             </a>
           </div>
         </div>
-        <div class="relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm focus-within:ring-2 focus-within:ring-red-500 focus-within:ring-offset-2 hover:border-gray-500">
+        <div class="relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white px-6 py-6 shadow-sm focus-within:ring-2 focus-within:ring-red-500 focus-within:ring-offset-2 hover:border-gray-500">
           <div class="flex-shrink-0">
             <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1696654149774-6674b4d1ee35?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
           </div>
@@ -53,8 +53,8 @@
     </div>
   </div>
   <div class="flow-root">
-    <div class="px-4 sm:px-0 mb-4">
-      <h3 class="text-base font-semibold leading-7 text-gray-900">Historial de cambios</h3>
+    <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+      <h3 class="text-base font-semibold text-gray-900">Historial de cambios</h3>
     </div>
     <ul role="list" class="-mb-8">
       <li>
