--- a/app/views/factory/formulas/show.html.erb
+++ b/app/views/factory/formulas/show.html.erb
@@ -1,15 +1,131 @@
-<div class="mx-auto md:w-2/3 w-full flex">
-  <div class="mx-auto">
-    <% if notice.present? %>
-      <p class="py-2 px-3 bg-green-100 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-    <% end %>
+<%= render(
+  "common/headings/page",
+  breadcrumbs: [
+    { title: t("navigation.dashboard"), path: factory_dashboard_index_path },
+    { title: t("titles.formula.index"), path: factory_formulas_path },
+    { title: @formula.name, path: factory_formula_path(@formula) },
+  ],
+  title: @formula.name,
+  actions: [
+    { label: t("navigation.edit"), path: edit_factory_formula_path(@formula), method: :get },
+  ],
+) %>
 
-    <%= render @formula %>
+<div class="grid grid-cols-1 xl:grid-cols-2 gap-8 mt-6">
+  <div>
+    <%= render(
+      "common/lists/description",
+      items: [
+        { label: Formula.human_attribute_name(:id), value: @formula.id },
+        { label: Formula.human_attribute_name(:name), value: @formula.name },
+        { label: Formula.human_attribute_name(:abrasive), value: @formula.abrasive },
+        { label: Formula.human_attribute_name(:grain), value: @formula.grain },
+        { label: Formula.human_attribute_name(:hardness), value: @formula.hardness },
+        { label: Formula.human_attribute_name(:porosity), value: @formula.porosity },
+        { label: Formula.human_attribute_name(:alloy), value: @formula.alloy },
+      ]
+    ) %>
+  </div>
 
-    <%= link_to "Edit this formula", edit_factory_formula_path(@formula), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to "Back to formulas", factory_formulas_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this formula", factory_formula_path(@formula), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+  <div class="flow-root">
+    <div>
+      <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+        <h3 class="text-base font-semibold text-gray-900">Ingredientes</h3>
+      </div>
+
     </div>
+
+    <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+      <h3 class="text-base font-semibold text-gray-900">Historial de cambios</h3>
+    </div>
+    <ul role="list" class="-mb-8">
+      <li>
+        <div class="relative pb-8">
+          <span class="absolute left-4 top-4 -ml-px h-full w-0.5 bg-gray-100" aria-hidden="true"></span>
+          <div class="relative flex space-x-3">
+            <div>
+              <span class="flex h-8 w-8 items-center justify-center rounded-full bg-blue-500 ring-8 ring-white">
+                <svg class="h-5 w-5 text-white" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
+                  <path d="M1 8.25a1.25 1.25 0 1 1 2.5 0v7.5a1.25 1.25 0 1 1-2.5 0v-7.5ZM11 3V1.7c0-.268.14-.526.395-.607A2 2 0 0 1 14 3c0 .995-.182 1.948-.514 2.826-.204.54.166 1.174.744 1.174h2.52c1.243 0 2.261 1.01 2.146 2.247a23.864 23.864 0 0 1-1.341 5.974C17.153 16.323 16.072 17 14.9 17h-3.192a3 3 0 0 1-1.341-.317l-2.734-1.366A3 3 0 0 0 6.292 15H5V8h.963c.685 0 1.258-.483 1.612-1.068a4.011 4.011 0 0 1 2.166-1.73c.432-.143.853-.386 1.011-.814.16-.432.248-.9.248-1.388Z" />
+                </svg>
+              </span>
+            </div>
+            <div class="flex min-w-0 flex-1 justify-between space-x-4 pt-1.5">
+              <div>
+                <p class="text-sm text-gray-500">Stock actual actualizado: 30 / 40</p>
+              </div>
+              <div class="whitespace-nowrap text-right text-sm text-gray-500">
+                <time datetime="2020-09-22">Oct 22</time>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="relative pb-8">
+          <span class="absolute left-4 top-4 -ml-px h-full w-0.5 bg-gray-100" aria-hidden="true"></span>
+          <div class="relative flex space-x-3">
+            <div>
+              <span class="flex h-8 w-8 items-center justify-center rounded-full bg-green-500 ring-8 ring-white">
+                <svg class="h-5 w-5 text-white" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
+                  <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                </svg>
+              </span>
+            </div>
+            <div class="flex min-w-0 flex-1 justify-between space-x-4 pt-1.5">
+              <div>
+                <p class="text-sm text-gray-500">Stock mínimo actualizado: 25 / 20</p>
+              </div>
+              <div class="whitespace-nowrap text-right text-sm text-gray-500">
+                <time datetime="2020-09-28">Oct 18</time>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="relative pb-8">
+          <span class="absolute left-4 top-4 -ml-px h-full w-0.5 bg-gray-100" aria-hidden="true"></span>
+          <div class="relative flex space-x-3">
+            <div>
+              <span class="flex h-8 w-8 items-center justify-center rounded-full bg-blue-500 ring-8 ring-white">
+                <svg class="h-5 w-5 text-white" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
+                  <path d="M1 8.25a1.25 1.25 0 1 1 2.5 0v7.5a1.25 1.25 0 1 1-2.5 0v-7.5ZM11 3V1.7c0-.268.14-.526.395-.607A2 2 0 0 1 14 3c0 .995-.182 1.948-.514 2.826-.204.54.166 1.174.744 1.174h2.52c1.243 0 2.261 1.01 2.146 2.247a23.864 23.864 0 0 1-1.341 5.974C17.153 16.323 16.072 17 14.9 17h-3.192a3 3 0 0 1-1.341-.317l-2.734-1.366A3 3 0 0 0 6.292 15H5V8h.963c.685 0 1.258-.483 1.612-1.068a4.011 4.011 0 0 1 2.166-1.73c.432-.143.853-.386 1.011-.814.16-.432.248-.9.248-1.388Z" />
+                </svg>
+              </span>
+            </div>
+            <div class="flex min-w-0 flex-1 justify-between space-x-4 pt-1.5">
+              <div>
+                <p class="text-sm text-gray-500">Stock mínimo actualizado: 10 / 25</p>
+              </div>
+              <div class="whitespace-nowrap text-right text-sm text-gray-500">
+                <time datetime="2020-09-30">Oct 5</time>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="relative pb-8">
+          <div class="relative flex space-x-3">
+            <div>
+              <span class="flex h-8 w-8 items-center justify-center rounded-full bg-green-500 ring-8 ring-white">
+                <svg class="h-5 w-5 text-white" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
+                  <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                </svg>
+              </span>
+            </div>
+            <div class="flex min-w-0 flex-1 justify-between space-x-4 pt-1.5">
+              <div>
+                <p class="text-sm text-gray-500">Materia prima ingresada</p>
+              </div>
+              <div class="whitespace-nowrap text-right text-sm text-gray-500">
+                <time datetime="2020-10-04">Oct 4</time>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
   </div>
 </div>
