--- a/app/views/factory/formula_elements/new.html.erb
+++ b/app/views/factory/formula_elements/new.html.erb
@@ -6,6 +6,6 @@
     { title: t("navigation.new"), path: new_factory_formula_element_path },
   ] %>
 
-<div class="md:w-2/3 w-full">
+<div class="w-full">
   <%= render "form", formula_element: @formula_element %>
 </div>
