--- a/app/views/common/forms/_simple.html.erb
+++ b/app/views/common/forms/_simple.html.erb
@@ -1,4 +1,4 @@
-<div class="space-y-12">
+<div class="w-full">
   <div class="border-b border-lightGray-300 pb-12 mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
     <%= yield %>
   </div>
