Debounce search form

--- a/app/views/factory/formula_elements/index.html.erb
+++ b/app/views/factory/formula_elements/index.html.erb
@@ -18,6 +18,8 @@
         data: {
           turbo_frame: "formula_elements_table",
           turbo_action: "advance",
+          controller: "common--form",
+          action: "input->common--form#submit",
         },
         class: "w-full max-w-lg lg:max-w-xs",
       ) do |f| %>
