--- a/app/views/factory/formulas/index.html.erb
+++ b/app/views/factory/formulas/index.html.erb
@@ -18,8 +18,8 @@
         data: {
           turbo_frame: "formulas_table",
           turbo_action: "advance",
-          controller: "common--form",
-          action: "input->common--form#submit",
+          controller: "common--submit-debounce",
+          action: "input->common--submit-debounce#submit",
         },
         class: "w-full max-w-lg lg:max-w-xs",
       ) do |f| %>
