Avoid using params.permit!
Instead, take all parameters present in the current URL query string and create the new URL using those.

--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -18,7 +18,8 @@
   <%= link_to(
     url,
     rel: "next",
-    class: "#{wrapper_class} text-gray-300 hover:bg-lightGray"
+    class: "#{wrapper_class} text-gray-300 hover:bg-lightGray",
+    data: { turbo_action: "advance" },
   ) do %>
     <span class="sr-only"><%= t("views.pagination.next") %></span>
     <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
