--- a/app/views/kaminari/_page.html.erb
+++ b/app/views/kaminari/_page.html.erb
@@ -14,5 +14,6 @@
     remote: remote,
     rel: page.rel,
     class: "relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-lightGray-300 focus:z-20 focus:outline-offset-0",
+    data: { turbo_action: "advance" },
   }) %>
 <% end -%>
