--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -14,9 +14,10 @@
       <% else %>
         <%= link_to(
           t("views.pagination.previous"),
-          url_for(params.permit!.merge(page: current_page - 1)),
+          url_for(request.query_parameters.merge(page: current_page - 1)),
           rel: "prev",
           class: "relative inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-lightGray",
+          data: { turbo_action: "advance" },
         ) %>
       <% end %>
       <% if current_page.last? %>
@@ -24,9 +25,10 @@
       <% else %>
         <%= link_to(
           t("views.pagination.next"),
-          url_for(params.permit!.merge(page: current_page + 1)),
+          url_for(request.query_parameters.merge(page: current_page + 1)),
           rel: "next",
           class: "relative ml-3 inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-lightGray",
+          data: { turbo_action: "advance" },
         ) %>
       <% end %>
     </div>
