--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -19,6 +19,7 @@
     url,
     rel: "prev",
     class: "#{wrapper_class} text-gray-300 hover:bg-lightGray",
+    data: { turbo_action: "advance" },
   ) do %>
     <span class="sr-only"><%= t("views.pagination.previous") %></span>
     <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
