Upgrade Rails from 7.2.2 to 8.0.0

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container mx-auto sm:px-6 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
-    <%= image_tag("logo", class: "mx-auto h-20 w-auto", alt: "Comman") %>
+    <%= image_tag("logo.png", class: "mx-auto h-20 w-auto", alt: "Comman") %>
     <h2 class="mt-6 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
   </div>
 
