--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -44,7 +44,7 @@
       <!-- Sidebar component, swap this element with another sidebar if you like -->
       <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-blue px-6 pb-2">
         <div class="flex h-16 shrink-0 items-center">
-          <%= image_tag("logo", class: "h-8 w-auto", alt: "Comman") %>
+          <%= image_tag("logo.png", class: "h-8 w-auto", alt: "Comman") %>
         </div>
         <nav class="flex flex-1 flex-col">
           <ul role="list" class="flex flex-1 flex-col gap-y-7">
@@ -90,7 +90,7 @@
   <!-- Sidebar component, swap this element with another sidebar if you like -->
   <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-blue px-6">
     <div class="flex h-16 shrink-0 items-center">
-      <%= image_tag("logo", class: "h-8 w-auto", alt: "Comman") %>
+      <%= image_tag("logo.png", class: "h-8 w-auto", alt: "Comman") %>
     </div>
     <nav class="flex flex-1 flex-col">
       <ul role="list" class="flex flex-1 flex-col gap-y-7">
