--- a/app/views/factory/formula_elements/index.html.erb
+++ b/app/views/factory/formula_elements/index.html.erb
@@ -23,7 +23,7 @@
         },
         class: "w-full max-w-lg lg:max-w-xs",
       ) do |f| %>
-        <label for="search" class="sr-only"><%= t("placeholders.search_by_name") %></label>
+        <%= f.label :name_cont, t("placeholders.search_by_name"), class: "sr-only" %>
         <div class="relative text-gray-300 focus-within:text-gray">
           <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
             <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
