--- a/app/views/factory/formulas/index.html.erb
+++ b/app/views/factory/formulas/index.html.erb
@@ -23,7 +23,7 @@
         },
         class: "w-full max-w-lg lg:max-w-xs",
       ) do |f| %>
-        <label for="search" class="sr-only"><%= t("placeholders.search_by_name_abrasive_grain_hardness_porosity_alloy") %></label>
+        <%= f.label :name_or_abrasive_or_grain_or_hardness_or_porosity_or_alloy_cont, t("placeholders.search_by_name_abrasive_grain_hardness_porosity_alloy"), class: "sr-only" %>
         <div class="relative text-gray-300 focus-within:text-gray">
           <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
             <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
