Clear out current_stock if infinite is set to true

--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -113,6 +113,12 @@
             </li>
             <li>
               <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue text-[0.625rem] font-medium text-white">V</span>
+                <span class="truncate">Ventas</span>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
                 <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue text-[0.625rem] font-medium text-white">F</span>
                 <span class="truncate">Fábrica</span>
               </a>
